# QtAccounting

./: CMakeLists.txt  Events.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PKGBUILD  Persistance.hpp  README.md  TODO.md  TransactionListModel.hpp  TransactionListWidget.hpp  TransactionsView.cpp  TransactionsView.hpp  Types.hpp  Util.hpp  main.cpp
Bundle/: Accounting.desktop  PKGBUILD
Entities/: BillEntity.hpp  TransactionEntity.hpp
Migrations/: 0001_2022-11-06_add-timestamps.hpp  0002_2022-11-06_transaction-status.hpp  0003_2022-11-07_sequential-ids.hpp
Models/: AbstractTransactionListModel.cpp  AbstractTransactionListModel.hpp  BillListModel.cpp  BillListModel.hpp  BillModel.cpp  BillModel.hpp  BillProxyModel.cpp  BillProxyModel.hpp  DatabaseModel.hpp  PocketMoneyProxyModel.cpp  PocketMoneyProxyModel.hpp  TransactionListModel.cpp  TransactionListModel.hpp  TransactionModel.cpp  TransactionModel.hpp
Notes/: 0001_form-layout-expands.md  0002_understanding-model-view.md  0003_generate-spreadsheet-odf.md  0004_crash-binding-sigsegv.md  0005_total-incorrect.md  0006_crash-in-random-location.md  0007_aws-crash-on-exit.md  0008_dialog-returns-wrong-code.md  0009_timeout-and-retry-ignored.md  0010_build-qt-from-source.md
Persistance/: Database.hpp  DeclareMigration.hpp  NewDatabase.hpp  S3.hpp  TransactionObject.hpp
Scripts/: backup.sh
Ui/: BillEditorDialog.ui  BillListWidget.ui  FutureProgressDialog.ui  MainWindow.ui
Widgets/: BillEditorDialog.hpp  BillEditorDialog.ui  BillListWidget.hpp  BillListWidget.ui  BillWidget.hpp  EditTransactionDialog.hpp  EditTransactionDialog.ui  FutureProgressDialog.hpp  StagedBillWidget.hpp  StagedBillWidget.ui  TransactionEditorDialog.hpp  TransactionEditorDialog.ui  TransactionWidget.hpp
